--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,9 +8,8 @@ repo_name: Luminous-Dynamics
 
 theme:
   name: material
-  custom_dir: overrides
-  logo: assets/logo.png
-  favicon: assets/favicon.png
+  # logo: assets/logo.png
+  # favicon: assets/favicon.png
   
   palette:
     # Palette toggle for light mode
@@ -56,8 +55,6 @@ theme:
 plugins:
   - search:
       separator: '[\s\-,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
-  - minify:
-      minify_html: true
 
 markdown_extensions:
   - abbr
